--- a/src/components/ui/catalog/Button/Button.module.scss
+++ b/src/components/ui/catalog/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .button {
     height: 3.5rem;
     width: 100%;
+    padding: 0 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
