--- a/src/components/ui/catalog/Button/Button.module.scss
+++ b/src/components/ui/catalog/Button/Button.module.scss
@@ -1,4 +1,6 @@
 .button {
+    --border-focus: var(--theme-primary-border-focus);
+
     height: 3.5rem;
     width: 100%;
     padding: 0 1.5rem;
@@ -8,6 +10,10 @@
     border-radius: 2rem;
     font-size: 1.6rem;
     font-weight: 600;
-    transition: .2s;
+    transition: 0.2s;
     cursor: pointer;
+
+    &:focus-within {
+        box-shadow: 0 0 0 0.2rem var(--border-focus);
+    }
 }
