--- a/src/components/ui/catalog/Input/Input.module.scss
+++ b/src/components/ui/catalog/Input/Input.module.scss
@@ -1,10 +1,17 @@
 .wrapper {
+    --border-focus: var(--theme-primary-border-focus);
+    --placeholder: var(--theme-primary-placeholder);
+
     width: 100%;
     height: 4rem;
     display: flex;
     align-items: center;
     gap: 1rem;
     border-radius: 2rem;
+
+    &:focus-within {
+        box-shadow: 0 0 0 0.2rem var(--border-focus);
+    }
 }
 
 .input {
@@ -13,6 +20,10 @@
     font-size: 1.6rem;
     font-weight: 500;
     padding-left: 2rem;
+
+    &::placeholder {
+        color: var(--placeholder);
+    }
 }
 
 .input__controls {
