--- a/src/components/ui/catalog/Modal/Modal.module.scss
+++ b/src/components/ui/catalog/Modal/Modal.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 
     &::before {
         content: "";
@@ -17,7 +18,7 @@
         width: 100%;
         height: 100%;
         background-color: #000000;
-        opacity: .3;
+        opacity: 0.3;
     }
 }
 
