--- a/src/components/ui/catalog/SongCard/SongCard.module.scss
+++ b/src/components/ui/catalog/SongCard/SongCard.module.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     border-radius: 1rem;
-    transition: .3s;
+    transition: 0.3s;
     cursor: pointer;
 
     &:hover .card__image::after {
@@ -17,7 +17,7 @@
         width: 100%;
         height: 100%;
         background-color: #000000;
-        opacity: .3;
+        opacity: 0.3;
     }
 
     &:hover .card__image__control {
@@ -37,7 +37,7 @@
     position: relative;
     border-radius: 1rem;
     overflow: hidden;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .card__image__control {
@@ -49,7 +49,7 @@
     z-index: 1;
     visibility: hidden;
     opacity: 0;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 .card__wrapper {
@@ -68,7 +68,7 @@
 }
 
 .card__dash {
-    height: .1rem;
+    height: 0.1rem;
     min-width: 1rem;
 }
 
