--- a/src/components/ui/catalog/Box/Box.module.scss
+++ b/src/components/ui/catalog/Box/Box.module.scss
@@ -5,6 +5,7 @@
     --thumb-hover: var(--theme-primary-scroll-thumb-hover);
 
     padding: 2rem;
+    display: flex;
     border-radius: 3rem;
     overflow: auto;
 
