--- a/src/components/ui/navigation/BoxStep/BoxStep.module.scss
+++ b/src/components/ui/navigation/BoxStep/BoxStep.module.scss
@@ -1,5 +1,15 @@
 .slide {
     width: 100%;
     height: 100%;
+    padding: 0 4rem;
+}
+
+.header {
     padding: 4rem;
+    padding-bottom: 0;
+}
+
+.footer {
+    padding: 4rem;
+    padding-top: 0;
 }
