--- a/src/components/ui/catalog/Box/Box.module.scss
+++ b/src/components/ui/catalog/Box/Box.module.scss
@@ -4,6 +4,7 @@
     --thumb: var(--theme-primary-scroll-thumb);
     --thumb-hover: var(--theme-primary-scroll-thumb-hover);
 
+    position: relative;
     display: flex;
     border-radius: 3rem;
     overflow: auto;
