updated: interfaces, catalog and ui components, added: dropdown components

--- a/src/components/ui/catalog/Input/Input.module.scss
+++ b/src/components/ui/catalog/Input/Input.module.scss
@@ -25,10 +25,10 @@
     &::placeholder {
         color: var(--placeholder);
     }
-}
 
-.input__controls {
-    padding-right: 2rem;
-    display: flex;
-    align-items: center;
+    &__controls {
+        padding-right: 2rem;
+        display: flex;
+        align-items: center;
+    }
 }
