--- a/src/components/ui/catalog/Modal/Modal.module.scss
+++ b/src/components/ui/catalog/Modal/Modal.module.scss
@@ -1,4 +1,4 @@
-.container {
+.black {
     position: absolute;
     top: 0;
     left: 0;
@@ -22,16 +22,11 @@
     }
 }
 
-.wrapper {
+.container {
     position: relative;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.modal {
-    width: 100%;
-    height: 100%;
 }
