--- a/src/components/ui/catalog/SimpleCarousel/SimpleCarousel.module.scss
+++ b/src/components/ui/catalog/SimpleCarousel/SimpleCarousel.module.scss
@@ -1,13 +1,12 @@
 .carousel {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
-}
 
-.carousel__item {
-    min-width: 100%;
-    transition: 0.4s;
-    overflow: hidden;
+    &__item {
+        min-width: 100%;
+        transition: 0.4s;
+        overflow: hidden;
+    }
 }
