--- a/src/components/ui/catalog/SongCard/SongCard.module.scss
+++ b/src/components/ui/catalog/SongCard/SongCard.module.scss
@@ -38,18 +38,18 @@
     border-radius: 1rem;
     overflow: hidden;
     transition: 0.3s;
-}
 
-.card__image__control {
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s;
+    &__control {
+        display: flex;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+        visibility: hidden;
+        opacity: 0;
+        transition: 0.3s;
+    }
 }
 
 .card__wrapper {
@@ -65,11 +65,11 @@
     gap: 1rem;
     flex-grow: 1;
     overflow: hidden;
-}
 
-.card__dash {
-    height: 0.1rem;
-    min-width: 1rem;
+    &__dash {
+        height: 0.1rem;
+        min-width: 1rem;
+    }
 }
 
 .card__controls {
