--- a/src/components/ui/navigation/Stepper/Stepper.module.scss
+++ b/src/components/ui/navigation/Stepper/Stepper.module.scss
@@ -1,12 +1,20 @@
-.step {
+.stepper {
     width: 100%;
     height: 100%;
-    padding: 0 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .header {
     padding: 4rem;
     padding-bottom: 0;
+}
+
+.step {
+    width: 100%;
+    height: 100%;
+    padding: 0 4rem;
 }
 
 .footer {
