updated: ui components, added: endless carousel

--- a/src/components/ui/catalog/EndlessCarousel/EndlessCarousel.module.scss
+++ b/src/components/ui/catalog/EndlessCarousel/EndlessCarousel.module.scss
@@ -6,7 +6,7 @@
 
     &__slide {
         min-width: 100%;
-        transition: 0.4s;
+        transition: inherit;
         overflow: hidden;
     }
 }
