fixed: bug with scroll settings, updated: ui components, main layout

--- a/src/components/modals/SettingsModal/menus/Settings/Settings.module.scss
+++ b/src/components/modals/SettingsModal/menus/Settings/Settings.module.scss
@@ -1,8 +1,24 @@
+@import "@styles/mixins/scroll.scss";
+
 .settings {
     padding: 0 4rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 4rem;
+    overflow: auto;
+
+    @include custom-scroll(
+        var(--theme-primary-scroll-thumb),
+        var(--theme-primary-scroll-thumb-hover)
+    );
+
+    &::-webkit-scrollbar-track-piece:end {
+        display: block;
+        background-color: transparent;
+        margin-bottom: 2.5rem;
+        margin-right: 2.5rem;
+    }
 }
 
 .settings__menus {
@@ -55,8 +71,7 @@
     }
 
     &__items {
-        margin-top: 4rem;
-        padding: 0 2.5rem;
+        padding: 4rem 2.5rem;
         display: flex;
         gap: 2rem;
     }
