--- a/src/components/layouts/MainLayout/MainLayout.module.scss
+++ b/src/components/layouts/MainLayout/MainLayout.module.scss
@@ -3,5 +3,7 @@
 }
 
 .content {
+    height: calc(100vh - 5rem);
     min-height: calc(100vh - 5rem); // - header height
+    max-height: calc(100vh - 5rem);
 }
