--- a/src/components/ui/catalog/Code/Code.module.scss
+++ b/src/components/ui/catalog/Code/Code.module.scss
@@ -1,6 +1,6 @@
 .code {
-    --bg-focus: var(--theme-primary-code-bg-focus);
-    --border-focus: var(--theme-primary-code-border-focus);
+    --bg-focus: var(--theme-code-bg-focus);
+    --border-focus: var(--theme-code-border-focus);
 
     display: flex;
     gap: 1rem;
