added: logout icon, border for avatar

--- a/src/components/layouts/MainLayout/Header/Header.module.scss
+++ b/src/components/layouts/MainLayout/Header/Header.module.scss
@@ -93,6 +93,7 @@
         max-width: 3.5rem;
         height: 3.5rem;
         background-color: #cccccc;
+        border: 0.1rem solid var(--theme-primary-border);
         border-radius: 50%;
     }
 
