--- a/src/components/layouts/MainLayout/Header/DropdownPanel/DropdownPanel.module.scss
+++ b/src/components/layouts/MainLayout/Header/DropdownPanel/DropdownPanel.module.scss
@@ -56,6 +56,7 @@
         max-width: 6rem;
         height: 6rem;
         background-color: #cccccc;
+        border: 0.1rem solid var(--theme-primary-border);
         border-radius: 50%;
     }
 
