--- a/src/components/layouts/UserLayout/UserLayout.module.scss
+++ b/src/components/layouts/UserLayout/UserLayout.module.scss
@@ -1,8 +1,9 @@
-.loader {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.main {
     background-color: var(--theme-secondary-bg);
+}
+
+.content {
+    height: calc(100vh - 5rem);
+    min-height: calc(100vh - 5rem); // - header height
+    max-height: calc(100vh - 5rem);
 }
