--- a/src/components/ui/navigation/HorizontalMenu/HorizontalMenu.module.scss
+++ b/src/components/ui/navigation/HorizontalMenu/HorizontalMenu.module.scss
@@ -3,26 +3,25 @@
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
+}
 
-    &__button {
-        --border-focus: var(--theme-primary-border-focus);
+.menu__button {
+    --border-focus: var(--theme-primary-border-focus);
 
-        width: 100%;
-        height: 3.5rem;
-        padding: 0 2rem;
-        font-weight: 500;
-        display: flex;
-        align-items: center;
-        color: var(--theme-primary-color);
-        background-color: var(--theme-primary-bg);
-        border: 0.1rem solid transparent;
-        border-radius: 2rem;
-        transition: 0.2s;
-        user-select: none;
-        cursor: pointer;
+    width: 100%;
+    height: 3.5rem;
+    padding: 0 2rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    color: var(--theme-primary-color);
+    background-color: var(--theme-primary-bg);
+    border: 0.1rem solid transparent;
+    transition: 0.2s;
+    user-select: none;
+    cursor: pointer;
 
-        &:focus-within {
-            box-shadow: 0 0 0 0.2rem var(--border-focus);
-        }
+    &:focus-within {
+        box-shadow: 0 0 0 0.2rem var(--border-focus);
     }
 }
