--- a/src/components/modals/SettingsModal/SettingsModal.module.scss
+++ b/src/components/modals/SettingsModal/SettingsModal.module.scss
@@ -7,8 +7,12 @@
 
     &__title {
         font-size: 1.8rem;
-        font-weight: 700;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
         color: var(--theme-primary-color);
+        cursor: pointer;
     }
 
     &__btn {
