added: skeleton, fixed: issue when scrolling modal is stay, updated: change avatar on skeleton

--- a/src/components/layouts/GuestLayout/Header/Header.module.scss
+++ b/src/components/layouts/GuestLayout/Header/Header.module.scss
@@ -4,6 +4,7 @@
     width: 100%;
     box-shadow: 0rem 0rem 0.5rem 0.05rem var(--theme-primary-shadow);
     background-color: var(--theme-primary-bg);
+    z-index: 50;
 }
 
 .header {
