--- a/src/components/ui/catalog/PostCard/PostCard.module.scss
+++ b/src/components/ui/catalog/PostCard/PostCard.module.scss
@@ -1,9 +1,10 @@
 .post {
     padding: 2rem 4rem;
     max-width: 60rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 2rem;
     border-radius: 2rem;
     cursor: pointer;
 }
@@ -30,12 +31,6 @@
     }
 
     &__user__avatar {
-        min-width: 5rem;
-        max-width: 5rem;
-        height: 5rem;
-        background-color: #cccccc;
-        border: 0.1rem solid var(--theme-primary-border);
-        border-radius: 50%;
     }
 }
 
@@ -56,6 +51,7 @@
         font-size: 1.2rem;
         font-weight: 600;
         gap: 1rem;
+        user-select: none;
     }
 
     &__time {
@@ -65,6 +61,7 @@
 }
 
 .post__text {
+    width: 100%;
     font-weight: 400;
     overflow: hidden;
     display: -webkit-box;
