--- a/src/components/layouts/LoaderLayout/LoaderLayout.module.scss
+++ b/src/components/layouts/LoaderLayout/LoaderLayout.module.scss
@@ -2,7 +2,9 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
     background-color: var(--theme-secondary-bg);
 }
