updated: loader layout, more to components runners

--- a/src/components/layouts/LoaderLayout/LoaderLayout.module.scss
+++ b/src/components/layouts/LoaderLayout/LoaderLayout.module.scss
@@ -7,4 +7,5 @@
     justify-content: center;
     gap: 1rem;
     background-color: var(--theme-secondary-bg);
+    color: var(--theme-secondary-color);
 }
