--- a/src/features/posts/components/ui/PostCard/PostCard.module.scss
+++ b/src/features/posts/components/ui/PostCard/PostCard.module.scss
@@ -63,6 +63,7 @@
 .post__text {
     width: 100%;
     font-weight: 400;
+    white-space: break-spaces;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 10;
