--- a/src/components/ui/catalog/HorizontalList/HorizontalList.module.scss
+++ b/src/components/ui/catalog/HorizontalList/HorizontalList.module.scss
@@ -1,13 +1,11 @@
-.menu {
+.list {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
 }
 
-.menu__button {
-    --border-focus: var(--theme-primary-border-focus);
-
+.list__element {
     width: 100%;
     height: 3.5rem;
     padding: 0 2rem;
@@ -20,8 +18,4 @@
     transition: 0.2s;
     user-select: none;
     cursor: pointer;
-
-    &:focus-within {
-        box-shadow: 0 0 0 0.2rem var(--border-focus);
-    }
 }
