--- a/src/components/ui/catalog/MultiLineInput/MultiLineInput.module.scss
+++ b/src/components/ui/catalog/MultiLineInput/MultiLineInput.module.scss
@@ -4,16 +4,28 @@
     --thumb: var(--theme-primary-scroll-thumb);
     --thumb-hover: var(--theme-primary-scroll-thumb-hover);
 
+    min-height: inherit;
+    max-height: inherit;
     height: 100%;
+
+    min-width: inherit;
+    max-width: inherit;
     width: 100%;
+
     overflow-x: auto;
 
     @include custom-scroll(var(--thumb), var(--thumb-hover));
 }
 
 .input {
+    min-height: inherit;
+    max-height: inherit;
     height: 100%;
+
+    min-width: inherit;
+    max-width: inherit;
     width: 100%;
+
     cursor: text;
 
     --placeholder: var(--theme-primary-placeholder);
