--- a/src/features/modals/components/modals/CreatePostModal/CreatePostModal.module.scss
+++ b/src/features/modals/components/modals/CreatePostModal/CreatePostModal.module.scss
@@ -1,4 +1,4 @@
-.modal__header {
+.header {
     display: flex;
     align-items: center;
     gap: 2rem;
@@ -6,24 +6,42 @@
     cursor: pointer;
 }
 
-.modal__form {
+.form {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 3rem;
+}
 
-    &__content {
-        // 2.5rem - header, 3.5rem - footer, 4rem - padding, 6rem - gap
-        max-height: calc(70rem - 2.5rem - 3.5rem - 4rem - 6rem);
-        display: flex;
-        gap: 2.5rem;
-    }
+.form__main {
+    display: flex;
+    gap: 2.5rem;
+}
 
-    &__text {
-        width: 100%;
-    }
+.form__main__text {
+    // modal header (2.5), form footer (3.5rem), padding (4rem), gap (3rem)
+    max-height: calc(min(90vh, 70rem) - 2.5rem - 3.5rem - 4rem - 6rem);
+    min-height: 5rem;
+    height: 100%;
+    width: calc(100% - 2.5rem - 5rem);
 
-    &__submit {
-        display: flex;
-        justify-content: flex-end;
+    @media screen and (max-width: 768px) {
+        // modal header (2.5), form footer (3.5rem), padding (4rem), gap (3rem)
+        max-height: calc(100vh - 2.5rem - 3.5rem - 4rem - 6rem);
     }
+}
+
+.form__footer {
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form__file__dropper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
